--- a/config/database.yml
+++ b/config/database.yml
@@ -13,19 +13,20 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: family_rails_pass
-  host: db
+  password:
+  # password: family_rails_pass
+  host: localhost
 
 development:
   <<: *default
-  database: app_name_development
+  database: family_rails_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: app_name_test
+  database: family_rails_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
